250815 21:55 이재빈 js 수정중

--- a/webapp/app/myPageNormal/normalMatching.html
+++ b/webapp/app/myPageNormal/normalMatching.html
@@ -55,8 +55,8 @@
               <div>2일 김괭이 돌봄회원 | 이용 시간 : 09 : 00 ~ 18 : 00
               포인트 사용 : 10,000</div>
               <div class="matchingbutton">
-                <button>이용완료</button>
-                <button>취소</button>
+                <button type="button">이용완료</button>
+                <button type="button">취소</button>
               </div>
             </li>
           </ul>
@@ -68,8 +68,8 @@
               <div>2일 김괭이 돌봄회원 | 이용 시간 : 09 : 00 ~ 18 : 00
                 포인트 사용 : 10,000</div>
               <div class="matchingbutton">
-                <button>이용완료</button>
-                <button>취소</button>
+                <button type="button">이용완료</button>
+                <button type="button">취소</button>
               </div>
             </li>
           </ul>
@@ -81,8 +81,8 @@
               <div>2일 김괭이 돌봄회원 | 이용 시간 : 09 : 00 ~ 18 : 00
                 포인트 사용 : 10,000</div>
               <div class="matchingbutton">
-                <button>이용완료</button>
-                <button>취소</button>
+                <button type="button">이용완료</button>
+                <button type="button">취소</button>
               </div>
             </li>
           </ul>
