--- a/webapp/app/myPageNormal/normalPoint.html
+++ b/webapp/app/myPageNormal/normalPoint.html
@@ -50,8 +50,8 @@
           <div class="point_have_title">포인트 잔액</div>
           <div class="point_point">10000 포인트</div>
           <div class="button">
-            <button id="chargeBtn">포인트 충전</button>
-            <button id="chargehis">충전 내역</button>
+            <button type="button" id="chargeBtn">포인트 충전</button>
+            <button type="button" id="chargehis">충전 내역</button>
           </div>
         </div>
         <!-- 포인트 사용 내역 섹션 -->
@@ -110,8 +110,8 @@
             </li>
           </ul>
         </nav>
-        <button id="deleteBtn">취소</button>
-        <button onclick="openpointcharge()" id="completeBtn">완료</button>
+        <button type="button" id="deleteBtn">취소</button>
+        <button type="button" onclick="openpointcharge()" id="completeBtn">완료</button>
       </div>
     </div>
     <!-- 포인트 충전 내역 모달 -->
@@ -122,9 +122,9 @@
           <div>
             <nav class="charge_month">
               <ul>
-                <li><button>&lt;</button></li>
+                <li><button type="button">&lt;</button></li>
                 <li><div>8월</div></li>
-                <li><button>&gt;</button></li>
+                <li><button type="button">&gt;</button></li>
               </ul>
             </nav>
           </div>
@@ -139,8 +139,8 @@
             </nav>
           </div>
         </div>
-        <button id="deletebutton">취소</button>
-        <button onclick="openpointhis()" id="completeBtn">완료</button>
+        <button type="button" id="deletebutton">취소</button>
+        <button type="button" onclick="openpointhis()" id="completeBtn">완료</button>
       </div>
     </div>
   </main>
