--- a/webapp/app/myPageNormal/normalreseiveMesseage.html
+++ b/webapp/app/myPageNormal/normalreseiveMesseage.html
@@ -93,6 +93,7 @@
       <div class="content">
         <div>쪽지 내용</div>
       </div>
+      <button type="button" id="deleteBtn">삭제</button>
     </div>
   </div>
 
