--- a/webapp/app/myPageNormal/normalMark.html
+++ b/webapp/app/myPageNormal/normalMark.html
@@ -70,8 +70,8 @@
     <div class="modal_box">
       <p>찜한 가게를 삭제하시겠습니까?</p>
       <div class="modal_buttons">
-        <button id="confirmDelete">확인</button>
-        <button id="cancelDelete">취소</button>
+        <button type="button" id="confirmDelete">확인</button>
+        <button type="button" id="cancelDelete">취소</button>
       </div>
     </div>
   </div>
@@ -80,7 +80,7 @@
     <div class="modal_box">
       <p>찜이 삭제 되었습니다.</p>
       <div class="modal_buttons">
-        <button id="check_confirmDelete">확인</button>
+        <button type="button" id="check_confirmDelete">확인</button>
       </div>
     </div>
   </div>
