--- a/webapp/app/myPageNormal/normalPost.html
+++ b/webapp/app/myPageNormal/normalPost.html
@@ -69,12 +69,31 @@
         </nav>
         <!-- 게시글 삭제 버튼 -->
         <div class="div_delete">
-          <button type="button" onclick="delMarks()">삭제</button>
+          <button type="button" id="btnDelete"">삭제</button>
         </div>
       </div>
     </form>
   
   </main>
+  <!-- 삭제 버튼 클릭시 확인 모달 -->
+  <div class="modal" id="deleteModal">
+    <div class="modal_box">
+      <p>게시글을 삭제하시겠습니까?</p>
+      <div class="modal_buttons">
+        <button type="button" id="confirmDelete">확인</button>
+        <button type="button" id="cancelDelete">취소</button>
+      </div>
+    </div>
+  </div>
+  <!-- 찜 삭제확인 모달 확인 버튼 클릭시 모달 -->
+  <div class="modal" id="chek_deleteModal">
+    <div class="modal_box">
+      <p>게시글이 삭제 되었습니다.</p>
+      <div class="modal_buttons">
+        <button type="button" id="check_confirmDelete">확인</button>
+      </div>
+    </div>
+  </div>
   <div id="footer"></div>
 </body>
 </html> 
