--- a/webapp/app/myPageNormal/normalPwCheck.html
+++ b/webapp/app/myPageNormal/normalPwCheck.html
@@ -34,7 +34,7 @@
         비밀번호<input id="pw_input" type="password" placeholder="비밀번호 8자리 입력">
         <div id="pwaccord">일치하지 않는 비밀번호 입니다</div>
       </form>
-      <button onclick="chPw()" class="checkBtn">비밀번호 확인</button>
+      <button type="button" onclick="chPw()" class="checkBtn">비밀번호 확인</button>
     </div>
   </main>
   <div id="footer"></div>
