--- a/webapp/app/myPageNormal/normalQuit.html
+++ b/webapp/app/myPageNormal/normalQuit.html
@@ -75,8 +75,8 @@
       <p>정말로 회원 탈퇴를 진행하시겠습니까?</p>
       <p>※미사용 포인트는 소멸됩니다</p>
       <div class="modal_buttons">
-        <button onclick="showDoneModal()" id="checkBtn">확인</button>
-        <button onclick="cancelQuit()" id="cancelBtn">취소</button>
+        <button type="button" onclick="showDoneModal()" id="checkBtn">확인</button>
+        <button type="button" onclick="cancelQuit()" id="cancelBtn">취소</button>
       </div>
     </div>
   </div>
@@ -85,7 +85,7 @@
     <div class="modal_box">
       <p>성공적으로 회원을 탈퇴 하셨습니다.</p>
       <div class="modal_buttons">
-        <a href="./../../main.html"><button id="doneOkBtn">확인</button></a>
+        <a href="./../../main.html"><button type="button" id="doneOkBtn">확인</button></a>
       </div>
     </div>
   </div>
