--- a/webapp/app/careMember/careMemberDetail.html
+++ b/webapp/app/careMember/careMemberDetail.html
@@ -30,7 +30,9 @@
             <!-- 프로필 픽 박스 -->
             <div class="profile_pic_box">
               <!-- 프로필 사진 -->
-              <img class="profile_pic" src="./../../assets/img/careMember/profilePicCare.png">
+              <div class="profile_pic_frame">
+                <img class="profile_pic" src="./../../assets/img/careMember/profilePicCare.png">
+              </div>
               <!-- 프로필 정보 칸 -->
               <div class="profile_intro">
                 <!-- 프로필 이름 -->
@@ -127,7 +129,7 @@
             <ul class="comment_list">
               <!-- 후기 리스트 li -->
               <li class="comment">
-                <div>
+                <div class="comment_div">
                   <!-- 후기 리스트 순번 -->
                   <div class="comment_number">
                     1
@@ -148,7 +150,7 @@
               </li>
               <!-- 후기 리스트 li -->
               <li class="comment">
-                <div>
+                <div class="comment_div">
                   <!-- 후기 리스트 순번 -->
                   <div class="comment_number">
                     1
@@ -161,6 +163,10 @@
                   <div class="comment_context">
                     나중에 또 부탁드립니다.
                   </div>
+                  <!-- 후기 리스트 내용 -->
+                  <div class="comment_edited">
+                    (수정됨)
+                  </div>
                   <!-- 후기 리스트 날짜 -->
                   <div class="comment_date">
                     2025-08-02
@@ -169,7 +175,7 @@
               </li>
               <!-- 후기 리스트 li -->
               <li class="comment">
-                <div>
+                <div class="comment_div">
                   <!-- 후기 리스트 순번 -->
                   <div class="comment_number">
                     1
