250815 2319 황승우 전부 수정 완료

--- a/webapp/app/login/modifyPassword.html
+++ b/webapp/app/login/modifyPassword.html
@@ -50,7 +50,7 @@
                 </div>
               </div>
               <div class="box_next">
-                <button>다음</button>
+                <button type="button" onclick="nextPg()">다음</button>
               </div>
             </div>
           </div>
