--- a/webapp/app/sign/terms.html
+++ b/webapp/app/sign/terms.html
@@ -24,7 +24,7 @@
         </div>
         <div class="terms_all">
           <div class="terms_checkbox">
-            <input type="checkbox" id="all" class="check">
+            <input type="checkbox" id="all">
             <label for="all">
               <div></div>
               <p class="all_p">전체 동의하기</p>
