250816 01:46 강버들 뉴스배너 이미지 추가, 돌봄 후기 수정삭제 추가 음식점 디테일 페이지 컬럼 추가

--- a/webapp/app/careMember/careMemberDetail.html
+++ b/webapp/app/careMember/careMemberDetail.html
@@ -97,7 +97,7 @@
           <!-- 쪽지 보내기 박스 -->
           <div id="send_button_box">
             <!-- 쪽지 보내기 버튼 -->
-            <button onclick="confirmShowup()" id="send_button">
+            <button onclick="sendLetterButtonClick()" id="send_button">
               쪽지 보내기
             </button>
           </div>
