--- a/webapp/app/restaurant/restaurantDetail.html
+++ b/webapp/app/restaurant/restaurantDetail.html
@@ -18,36 +18,47 @@
     <!-- 메인 바디 -->
     <div class="main_body">
       <!-- 페이지 타이틀 -->
-      <p id="page_title">
-        식당 이름
-      </p>
+      <h1 id="page_title">
+        식당 이름 + 지점명
+      </h1>
+      <div id="short_info">
+        <div>
+          <p id="short_firstfloor">일층: O</p>
+          <p id="short_ramp">경사로: O</p>
+          <p id="short_entrance_curb">입구턱: O</p>
+          <p id="short_entrance_step">입구문턱: O</p>
+          <p id="short_restroom_curb">화장실턱: O</p>
+        </div>
+        <div>
+          <p id="short_restroom_step">화장실문턱: O</p>
+          <p id="short_restroom">장애인화장실: O</p>
+          <p id="short_elevator">엘리베이터: O</p>
+          <p id="short_parking">주차장: O</p>
+          <p id="short_disabled_parking">장애인주차장: O</p>
+        </div>
+
+      </div>
       <!-- 페이지 내용 영역 -->
       <div class="context">
         <!-- 음식점 소개 영역 -->
         <div class="detail_info_area">
           <!-- 음식점 이미지 -->
           <div class="restaurant_img_box">
-            <img id="restaurant_img" src="./../../assets/img/restaurant/re1.jpg">
+            <img id="restaurant_img" src="./../../assets/img/restaurant/re0.jpg">
           </div>
           <!-- 음식점 소개 영역 -->
           <div class="restaurant_info">
             <!-- 음식점 정보 -->
-            <div class="short_info">
-              <h1 id="short_name">
-                자담치킨
-              </h1>
-              <p id="short_category">
-                · 한식
-              </p>
-              <p id="short_call">
-                · 전화번호
-              </p>
-              <p id="short_restroom">
-                · 장애인 화장실 여부 : O
-              </p>
-              <p id="short_ramp">
-                · 경사로 유무 : O
-              </p>
+            <div class="restaurant_information">
+              <div class="restaurant_name">
+                <h1 id="short_name">자담치킨</h1>
+                <h1 id="short_branch">방배점</h1>
+              </div>
+              <p id="short_category">상권업종중분류: O</p>
+              <p id="short_address">도로명 주소: O</p>
+              <p id="short_call">전화번호: O</p>
+              <p id="short_hours">영업 시간: O</p>
+              <p id="short_takeout">테이크아웃: O</p>
             </div>
             <!-- 음식점 설명 -->
             <div class="restaurant_introduction">
