--- a/webapp/app/myPageNormal/normalMatching.html
+++ b/webapp/app/myPageNormal/normalMatching.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./../../assets/css/header.css">
   <link rel="stylesheet" href="./../../assets/css/footer.css">
   <script defer src="./../../assets/js/main/include.js"></script>
+  <script defer src="./../../assets/js/myPageNormal/normalMatching.js"></script>
 </head>
 <body>
   <div id="header"></div>
