250817 17:84 장성주 완성

--- a/webapp/app/myPageCare/careMark.html
+++ b/webapp/app/myPageCare/careMark.html
@@ -56,7 +56,7 @@
           </ul>
         </nav>
         <!-- 페이지 상세 내역 -->
-        <nav class="mark_list"><a href="./../restaurant/restaurantDetail.html">
+        <nav class="mark_list"><a href="">
             <ul>
               <li><input type="checkbox"></li>
               <li class="name">
