--- a/webapp/app/myPageCare/carePointreturn.html
+++ b/webapp/app/myPageCare/carePointreturn.html
@@ -40,8 +40,8 @@
       <div class="info_box">
         <ul>
           <li>포인트 환급 신청이 가능합니다.</li>
-          <li>환급은 1,000원 단위로 가능합니다.</li>
-          <li>메 아이 비 해~피 매일 웃고 싶어요~</li>
+          <li>환급은 10원 단위로 가능합니다.</li>
+          <li>수수료는 10% 입니다.</li>
         </ul>
       </div>
       <!-- 페이지 세부 정보 -->
@@ -55,7 +55,7 @@
         <div class="point_table">
           <div class="point_fixed"><label for="input_point">신청 포인트</label></div>
           <div class="point_row">
-            <input type="text" id="input_point" value="38,000">
+            <input type="text" id="input_point"placeholder="환급할 포인트를 입력하세요">
             <span>(최대 10만 포인트)</span>
           </div>
         </div>
