--- a/webapp/app/myPageCare/careProfile.html
+++ b/webapp/app/myPageCare/careProfile.html
@@ -93,21 +93,14 @@
                       <button>우편번호 찾기</button>
                     </li>
                     <li>
-                      <input type="text" placeholder="상세 주소">
+                      <input type="text" placeholder="상세 주소" id="detail">
                       <button>확인</button>
                     </li>
                   </ul>
                 </nav>
               </div>
             </div>
-<!-- 이메일 수정 칸 -->
-            <div class="email">
-              <div>이메일</div>
-              <div class="email_detail">
-                <input type="email" placeholder="fdsfs@naver.com">
-                <button>수정</button>
-              </div>
-            </div>
+
 <!-- 소개글 수정 칸 -->
             <div class="introduce">
               <div>소개글</div>
