250817 18:18 강버들 음식점 디테일 찜하기, 목록 버튼 + 돌봄회원 요일 체크박스 추가 + 돌봄회원 디테일 하트 추가

--- a/webapp/app/careMember/careMemberDetail.html
+++ b/webapp/app/careMember/careMemberDetail.html
@@ -29,6 +29,9 @@
           <div class="profile">
             <!-- 프로필 픽 박스 -->
             <div class="profile_pic_box">
+              <div id="heart_img_box">
+                <img draggable="false" onclick="switchHeart()" id="heart_img" src="./../../assets/img/careMember/heart_icon.png">
+              </div>
               <!-- 프로필 사진 -->
               <div class="profile_pic_frame">
                 <img class="profile_pic" src="./../../assets/img/careMember/profilePicCare.png">
