--- a/webapp/header_login.html
+++ b/webapp/header_login.html
@@ -1,6 +1,6 @@
 <header id="site_header_login">
   <!-- 헤더 윗 줄 -->
-  <div>
+  <div id="header_upper">
     <!-- 헤더 윗 줄 왼쪽 -->
     <span>
       <!-- 로고 -->
