--- a/webapp/app/careMember/careMember.html
+++ b/webapp/app/careMember/careMember.html
@@ -25,13 +25,13 @@
       <div id="search_area">
         <!-- 검색 창 분류 선택 메뉴 -->
         <select id="search_criteria">
-          <!-- 이름 분류 -->
+          <!-- 이름 검색 -->
           <option value="name">
             이름
           </option>
-          <!-- 요일 분류 -->
-          <option value="day">
-            요일
+          <!-- 소개 검색 -->
+          <option value="introduce">
+            소개
           </option>
         </select>
         <!-- 검색 입력 창 -->
@@ -40,6 +40,29 @@
         <div id="search_icon_box">
           <!-- 검색 버튼 이미지 -->
           <img id="search_icon" src="./../../assets/img/careMember/search_icon.png">
+        </div>
+      </div>
+      <div id="day_list">
+        <div>
+          <input type="checkbox" id="mon" checked>월
+        </div>
+        <div>
+          <input type="checkbox" id="tue" checked>화
+        </div>
+        <div>
+          <input type="checkbox" id="wed" checked>수
+        </div>
+        <div>
+          <input type="checkbox" id="thu" checked>목
+        </div>
+        <div>
+          <input type="checkbox" id="fri" checked>금
+        </div>
+        <div>
+          <input type="checkbox" id="sat" checked>토
+        </div>
+        <div>
+          <input type="checkbox" id="sun" checked>일
         </div>
       </div>
       <!-- 카드 리스트 컨텍스트 -->
