250817 18L24 강버들 음식점 용어 가게로 수정

--- a/webapp/app/restaurant/restaurant.html
+++ b/webapp/app/restaurant/restaurant.html
@@ -21,7 +21,7 @@
     <div class="main_body">
       <!-- 페이지 타이틀 -->
       <p class="page_title">
-        음식점 리스트
+        가게 리스트
       </p>
       <!-- 페이지 내용 -->
       <div class="context">
