--- a/webapp/app/restaurant/restaurantDetail.html
+++ b/webapp/app/restaurant/restaurantDetail.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>함께 걸음 - 음식점 리스트 디테일</title>
+  <title>함께 걸음 - 가게 디테일</title>
   <link rel="stylesheet" href="./../../assets/css/restaurant/restaurantDetail.css">
   <link rel="stylesheet" href="./../../assets/css/header.css">
   <link rel="stylesheet" href="./../../assets/css/footer.css">
@@ -21,7 +21,7 @@
     <div class="main_body">
       <!-- 페이지 타이틀 -->
       <h1 id="page_title">
-        식당 이름 + 지점명
+        가게 이름 + 지점명
       </h1>
       <!-- 페이지 내용 영역 -->
       <div class="context">
