--- a/webapp/header.html
+++ b/webapp/header.html
@@ -36,11 +36,11 @@
           </a>
         </div>
       </li>
-      <!-- 음식점 리스트 메뉴 -->
+      <!-- 가게 리스트 메뉴 -->
       <li>
         <div>
           <a href="./../restaurant/restaurant.html">
-            · 음식점 리스트
+            · 가게 리스트
           </a>
         </div>
       </li>
