--- a/webapp/header_login.html
+++ b/webapp/header_login.html
@@ -39,11 +39,11 @@
           </a>
         </div>
       </li>
-      <!-- 음식점 리스트 메뉴 -->
+      <!-- 가게 리스트 메뉴 -->
       <li>
         <div>
           <a href="./../restaurant/restaurant.html">
-            · 음식점 리스트
+            · 가게 리스트
           </a>
         </div>
       </li>
