--- a/webapp/header_main_login.html
+++ b/webapp/header_main_login.html
@@ -40,11 +40,11 @@
           </a>
         </div>
       </li>
-      <!-- 음식점 리스트 메뉴 -->
+      <!-- 가게 리스트 메뉴 -->
       <li>
         <div>
           <a href="./app/restaurant/restaurant.html">
-            · 음식점 리스트
+            · 가게 리스트
           </a>
         </div>
       </li>
