250871 22:32 장성주 식당 쪽 수정

--- a/webapp/app/myPageCare/careMark.html
+++ b/webapp/app/myPageCare/careMark.html
@@ -56,17 +56,17 @@
           </ul>
         </nav>
         <!-- 페이지 상세 내역 -->
-        <nav class="mark_list"><a href="">
+        <nav class="mark_list"><a href="./../restaurant/restaurantDetail.html">
             <ul>
               <li><input type="checkbox"></li>
               <li class="name">
-                <div>자담치킨</div>
+                <div>Cafedecen</div>
               </li>
               <li class="location">
-                <div>서울시 강남구</div>
+                <div>서울시 서초구</div>
               </li>
               <li class="phone">
-                <div>02)1234-5678</div>
+                <div>02)521-3512</div>
               </li>
             </ul>
           </a>
