250818 11:57 김태현 map페이지 설명 추가, 뉴스 수정 도중 커밋

--- a/webapp/app/map/map.html
+++ b/webapp/app/map/map.html
@@ -18,7 +18,9 @@
     <!-- 지도 페이지 컨테이너 -->
     <div class="map_container">
       <!-- 지도 api 칸 -->
-      <div class="map_api"><img class="map_img" src="./../../assets/img/map/mapImg.png" alt="지도그림"></div>
+      <div class="map_api"><img class="map_img" src="./../../assets/img/map/mapImg.png" alt="지도그림">
+        <div class="site_info">지도를 클릭 시 해당 가게 설명이 나옵니다</div>
+      </div>
       <!-- 지도 클릭 시 사이드바 -->
       <div class="sidebar">
         <!-- 지역 정보 -->
@@ -43,7 +45,8 @@
               <li class="info_phonenum"><img src="./../../assets/img/map/call.png" alt=""> 0507-1350-6769</li><br>
               <!-- 장소 상세(인터넷 유무, 배달 유무 등등...) -->
               <li class="info_detail"><img src="./../../assets/img/map/market.png" alt=""> 배달, 포장, 무선 인터넷,
-                <br>&emsp;&emsp; 반려동물, 동반</li>
+                <br>&emsp;&emsp; 반려동물, 동반
+              </li>
               <!-- 찜 버튼 -->
               <li id="wishbtn"><img src="./../../assets/img/map/star.png" alt=""> 찜버튼</li>
             </ul>
